
Main improvements of TOPPView:

Main improvements of TOPP:

Main improvements of OpenMS C++ library:
- mzML 1.1.0 support (final)

Changes to OpenMS XML formats:

Detailed list of changes to specific OpenMS classes
- New classes
- Removed classes
  - PeakIcon was removed as it is not needed anymore
  - FactoryProduct was removed as it is not needed anymore (replaced by DefaultParamHandler) 
- Changes to Classes
  - DataValue: added constructor for std::string and QString
  - MetaInfo: setValue method takes only DataValue now
  - MetaInfoInterface: setMetaValue method takes only DataValue now
  - Param: setValue method takes only DataValue now
  - Moved DataProcessing from ExperimentalSettings to SpectrumSettings (for mzML)
  - Precursor now supports multiple dissociation methods

Changes to the contrib package:
- Added CoinMP 1.3.3

Bug fixes:
- [2778461]: mzData files containing 'supDataArray' elements no longer crash OpenMS 
- [2777173]: TOPPView 2D view projections no longer forget the draw mode on repaint
- [2776386]: TOPPView snap-to-max intensity mode no longer crashes with empty spectra
- [2775912]: PeakPickerCWT no longer assigns RT=-1 to MS/MS spectra

------------------------------------------------------------------------------------------
----                                  OpenMS 1.4                                      ----
------------------------------------------------------------------------------------------

Main improvements of TOPPView:
- Drag-and-drop is now supported from the layer bar, spectrum bar and for files from the operating system
- Improved visualization of very high-resolution data
- Improved painting speed of 2D view

Main improvements of TOPP:
- Added new tool TextImporter, which can convert text files to featureXML
- TextExporter can now export peptide/protein information stored in consensusXML
- PeakPicker: reduced the number of parameters, added parallization support