@@ -3,6 +3,7 @@ set(directory source/FORMAT/DB)
 
 ### list all filenames of the directory here
 set(sources_list
+PersistentObject.C
 DBAdapter.C
 DBConnection.C
 )
