@@ -38,7 +38,6 @@ PepNovoInfile.C
 PepNovoOutfile.C
 PepXMLFile.C
 ProtXMLFile.C
-PersistentObject.C
 SequestInfile.C
 SequestOutfile.C
 TextFile.C
