@@ -28,7 +28,7 @@
 #include <OpenMS/CONCEPT/ClassTest.h>
 
 ///////////////////////////
-#include <OpenMS/FORMAT/PersistentObject.h>
+#include <OpenMS/FORMAT/DB/PersistentObject.h>
 ///////////////////////////
 
 using namespace OpenMS;
