@@ -16,13 +16,15 @@ Detailed list of changes to specific OpenMS classes
 - Removed classes
   - PeakIcon was removed as it is not needed anymore
   - FactoryProduct was removed as it is not needed anymore (replaced by DefaultParamHandler) 
+- Renamed and moved classes
+  - Moved PersistentObject from FORMAT/ to FORMAT/DB/
 - Changes to Classes
   - DataValue: added constructor for std::string and QString
   - MetaInfo: setValue method takes only DataValue now
   - MetaInfoInterface: setMetaValue method takes only DataValue now
   - Param: setValue method takes only DataValue now
-  - Moved DataProcessing from ExperimentalSettings to SpectrumSettings (for mzML)
-  - Precursor now supports multiple dissociation methods
+  - ExperimentalSettings: Moved DataProcessing to SpectrumSettings (for mzML)
+  - Precursor: supports multiple dissociation methods now (for mzML)
 
 Changes to the contrib package:
 - Added CoinMP 1.3.3
